--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -45,5 +46,6 @@
     <footer>
         <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
     </footer>
+    </div>
 </body>
 </html>
