Cleaned CSS, fixed footer layout and centering

--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@
 </head>
 <body>
     <div class="container">
-    <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>      
-    <header>
-        <h1>Aaron Barkley</h1>
-        <h2>Cybersecurity Consultant | U.S. Army Veteran | Risk & Threat Specialist</h2>
-    </header>
-
-    <main>
-        <section id="about">
-            <h3>About Me</h3>
-            <p>Cybersecurity consultant and U.S. Army veteran with a passion for protecting critical systems, reducing risk, and strengthening security postures. Experienced in incident response, threat hunting, system hardening, and risk management.</p>
-        </section>
-
-        <section id="projects">
-            <h3>Projects</h3>
+        <nav>
             <ul>
-                <li><strong>Resume Compatibility Tool:</strong> Web tool designed to help veterans tailor their resumes for job applications.</li>
-                <li><strong>Enterprise Wi-Fi Overhaul:</strong> Redesigned and secured a multi-building network infrastructure for a small business.</li>
-                <li><strong>Incident Response & Threat Hunting Lab:</strong> Built a home lab simulating attacks and defenses.</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
             </ul>
-        </section>
+        </nav>      
+        <header>
+            <h1>Aaron Barkley</h1>
+            <h2>Cybersecurity Consultant | U.S. Army Veteran | Risk & Threat Specialist</h2>
+        </header>
 
-        <section id="contact">
-            <h3>Contact</h3>
-            <p>Email: <a href="mailto:aaronjamesbarkley@gmail.com">aaronjamesbarkley@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/aaron-j-barkley/" target="_blank">aaron-j-barkley</a></p>
-        </section>
-    </main>
+        <main>
+            <section id="about">
+                <h3>About Me</h3>
+                <p>Cybersecurity consultant and U.S. Army veteran with a passion for protecting critical systems, reducing risk, and strengthening security postures. Experienced in incident response, threat hunting, system hardening, and risk management.</p>
+            </section>
 
-    <footer>
-        <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
-    </footer>
+            <section id="projects">
+                <h3>Projects</h3>
+                <ul>
+                    <li><strong>Resume Compatibility Tool:</strong> Web tool designed to help veterans tailor their resumes for job applications.</li>
+                    <li><strong>Enterprise Wi-Fi Overhaul:</strong> Redesigned and secured a multi-building network infrastructure for a small business.</li>
+                    <li><strong>Incident Response & Threat Hunting Lab:</strong> Built a home lab simulating attacks and defenses.</li>
+                </ul>
+            </section>
+
+            <section id="contact">
+                <h3>Contact</h3>
+                <p>Email: <a href="mailto:aaronjamesbarkley@gmail.com">aaronjamesbarkley@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/aaron-j-barkley/" target="_blank">aaron-j-barkley</a></p>
+            </section>
+        </main>
+
+        <footer>
+            <div class="footer-container">
+                <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
+            </div>
+        </footer>
+        
     </div>
 </body>
 </html>
