Cleaned up HTML structure, added sticky footer, updated layout

--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,25 @@
         </ul>
     </nav>
 
-    <header>
-        <h1>Contact</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Contact</h1>
+        </header>
 
-    <main>
-        <p>Contact info will go here soon!</p>
-    </main>
+        <main>
+            <section>
+                <h3>Get in Touch</h3>
+                <p>Email: <a href="mailto:aaronjamesbarkley@gmail.com">aaronjamesbarkley@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/aaron-j-barkley/" target="_blank">LinkedIn</a></p>
+                <p>GitHub: <a href="https://github.com/lumberjack3E" target="_blank">GitHub</a></p>
+            </section>
+        </main>
 
-    <footer>
-        <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
-    </footer>
+        <footer>
+            <div class="footer-container">
+                <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
