--- a/resume.html
+++ b/resume.html
@@ -16,16 +16,28 @@
         </ul>
     </nav>
 
-    <header>
-        <h1>Resume</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Resume</h1>
+        </header>
 
-    <main>
-        <p>Resumes will go here soon!</p>
-    </main>
+        <main>
+            <section>
+                <h3>Download Resume</h3>
+                <p>
+                    <a href="A_Barkley_Updated_Resume_VS2.pdf" download>Aaron Barkley Resume (PDF)</a> 
+                </p>
+                <p>    
+                    <a href="CoverLetter.pdf" download>Aaron Barkley Cover Letter (PDF)</a>
+                </p>
+            </section>
+        </main>
 
-    <footer>
-        <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
-    </footer>
+        <footer>
+            <div class="footer-container">
+                <p>&copy; 2025 Aaron Barkley. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
