--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <nav>
-            <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>      
+    <nav>
+        <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>   
+    <div class="container">   
         <header>
+            <img src="https://media.licdn.com/dms/image/v2/D5603AQF2Dq31l1OJRw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1711220802019?e=1751500800&v=beta&t=wNtTOFccr4OT_1pS1QPxAqBu4GctpANN1hWpTs6yKAo" alt="Profile picture" class="profile-pic">
             <h1>Aaron Barkley</h1>
             <h2>Cybersecurity Consultant | U.S. Army Veteran | Risk & Threat Specialist</h2>
         </header>
