--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Aaron Barkley</title>
+    <title>PAGE TITLE HERE - Aaron Barkley</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,19 +18,13 @@
 
     <div class="container">
         <header>
-            <h1>Projects</h1>
+            <h1>PAGE TITLE HERE</h1>
         </header>
 
         <main>
             <section>
-                <h3>Featured Projects</h3>
-                <p>
-                    <ul>
-                        <li><strong>Resume Compatibility Tool:</strong> Web tool designed to help veterans tailor their resumes for job applications.</li>
-                        <li><strong>Enterprise Wi-Fi Overhaul:</strong> Redesigned and secured a multi-building network infrastructure for a small business.</li>
-                        <li><strong>Incident Response Lab:</strong> Simulated attacks and defenses in a home lab environment.</li>
-                    </ul>
-                </p>
+                <h3>SECTION TITLE</h3>
+                <p>Page-specific content goes here.</p>
             </section>
         </main>
 
