--- a/resume.html
+++ b/resume.html
@@ -25,10 +25,8 @@
             <section>
                 <h3>Download Resume</h3>
                 <p>
-                    <a href="A_Barkley_Updated_Resume_VS2.pdf" download>Aaron Barkley Resume (PDF)</a> 
-                </p>
-                <p>    
-                    <a href="CoverLetter.pdf" download>Aaron Barkley Cover Letter (PDF)</a>
+                    <a href="A_Barkley_Updated_Resume_VS2.pdf" download class="download-link">Download Resume</a>
+                    <a href="CoverLetter.pdf" download class="download-link">Download Cover Letter</a>
                 </p>
             </section>
         </main>
