--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <nav>
         <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact.html">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>   
+    </nav>    
     <div class="container">   
         <header>
             <img src="https://media.licdn.com/dms/image/v2/D5603AQF2Dq31l1OJRw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1711220802019?e=1751500800&v=beta&t=wNtTOFccr4OT_1pS1QPxAqBu4GctpANN1hWpTs6yKAo" alt="Profile picture" class="profile-pic">
@@ -27,7 +27,6 @@
                 <h3>About Me</h3>
                 <p>Cybersecurity consultant and U.S. Army veteran with a passion for protecting critical systems, reducing risk, and strengthening security postures. Experienced in incident response, threat hunting, system hardening, and risk management.</p>
             </section>
-
             <section id="projects">
                 <h3>Projects</h3>
                 <ul>
@@ -36,11 +35,17 @@
                     <li><strong>Incident Response & Threat Hunting Lab:</strong> Built a home lab simulating attacks and defenses.</li>
                 </ul>
             </section>
-
+            <section id="resume">
+                <h3>Resume</h3>
+                <p>You can download my resume here:</p>
+                <a href="A_Barkley_Updated_Resume_VS2.pdf" download class="download-link">Download Resume</a>
+                <a href="CoverLetter.pdf" download class="download-link">Download Cover Letter</a>
+            </section>            
             <section id="contact">
                 <h3>Contact</h3>
                 <p>Email: <a href="mailto:aaronjamesbarkley@gmail.com">aaronjamesbarkley@gmail.com</a></p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/aaron-j-barkley/" target="_blank">aaron-j-barkley</a></p>
+                <p>GitHub: <a href="https://github.com/lumberjack3E" target="_blank">lumberjack3E</a></p>
             </section>
         </main>
 
