--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
     </div>
    <script>
-    fetch('bio.js')
+    fetch('bio.html')
         .then(response => response.text())
         .then(data => {
             document.getElementById('bio-text').innerHTML = data;
