--- a/projects/resume-tool.html
+++ b/projects/resume-tool.html
@@ -2,8 +2,10 @@
 
 <p><strong>Overview:</strong> A web-based application that analyzes resume and job description alignment for job-seeking veterans.</p>
 
-<p><strong>My Role:</strong> I designed and developed both the frontend and backend. I created a keyword scanner that evaluates alignment between uploaded resumes and job descriptions. I also implemented a clean UI, added accessibility features, and created keyword suggestion logic based on common ATS filters. The backend is currently being expanded with Python for deeper analysis.</p>
+<p><strong>My Role:</strong> I designed and developed both the frontend and backend. I created a keyword scanner that evaluates alignment between uploaded resumes and job descriptions. I implemented a clean UI, added accessibility features, and built keyword suggestion logic based on common ATS filters. The backend is currently being expanded with Python for deeper analysis — including a neural net model in progress to better understand contextual relevance and reduce false negatives in scoring.</p>
 
 <p><strong>Tech Used:</strong> HTML, CSS, JavaScript, GitHub Pages, Python (in development)</p>
 
-<p><strong>Impact:</strong> Helped over 50 veteran job seekers improve resume targeting. Now used by NWVIT in resume prep workshops, helping reduce rejection rates from ATS filters.</p>
+<p><strong>Impact:</strong> Helped over 50 veteran job seekers improve resume targeting. Currently being used by NWVIT in resume prep workshops, helping reduce rejection rates from ATS filters.</p>
+
+<p><strong>My Vision:</strong> I built this tool because I know firsthand how frustrating the job hunt can be — especially for veterans. It’s hard to explain military experience in civilian terms, and harder still when ATS filters auto-reject you. My goal was to demystify that process and give transitioning vets something they could use to improve their odds and understand where they stand.</p>
