--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h3>Projects</h3>
                 <ul>
                     <li><a href="#" onclick="event.preventDefault(); loadProject('projects/resume-tool.html');">Resume Compatibility Tool</a></li>
+                    <li><a href="#" onclick="event.preventDefault(); loadProject('projects/mrbc-network.html');">MRBC Network & Security Upgrade</a></li>
                   <!-- Later we'll add more here -->
                 </ul>
                 <div id="project-details">
