Add advocacy project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="#" onclick="event.preventDefault(); loadProject('projects/resume-tool.html');">Resume Compatibility Tool</a></li>
                     <li><a href="#" onclick="event.preventDefault(); loadProject('projects/mrbc-network.html');">MRBC Network & Security Upgrade</a></li>
                     <li><a href="#" onclick="event.preventDefault(); loadProject('projects/ir-lab.html');">Incident Response & Threat Hunting Lab</a></li>
+                    <li><a href="#" onclick="event.preventDefault(); loadProject('projects/sva-dc-advocacy.html');">Veteran Advocacy – D.C. (SVA)</a></li>
                   <!-- Later we'll add more here -->
                 </ul>
                 <div id="project-details">
