--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
             });
         }
       </script>
+      <button id="backToTop" onclick="scrollToTop()">↑ Back to Top</button>
+      <script>
+        function scrollToTop() {
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+      
+        window.onscroll = function () {
+          const btn = document.getElementById("backToTop");
+          if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+            btn.style.display = "block";
+          } else {
+            btn.style.display = "none";
+          }
+        };
+      </script>
       
 </body>
 </html>
